--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,16 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 LINUXDO_CLIENT_ID="your_linuxdo_client_id"
 LINUXDO_CLIENT_SECRET="your_linuxdo_client_secret"
 LINUXDO_SCOPE="read"
+# Linux.do OAuth URLs (Optional, defaults to connect.linux.do)
+LINUXDO_AUTHORIZE_URL="https://connect.linux.do/oauth2/authorize"
+LINUXDO_TOKEN_URL="https://connect.linux.do/oauth2/token"
+LINUXDO_API_BASE_URL="https://connect.linux.do/"
+
+# --- Feature Flags ---
+# Set to true to enable Linux.do OAuth login
+ENABLE_LINUXDO_LOGIN=false
+# Set to true to enable database-backed redemption code generation
+ENABLE_REDEMPTION=false
 
 # --- Database ---
 # The connection string for your SQLite database.
